// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconUploadSolid should correctly render icon with all props specified 1`] = `
<AccessibleSVG
  className="icon-upload-solid test"
  height={100}
  title="title"
  viewBox="0 0 24 24"
  width={200}
>
  <path
    className="fill-color"
    d="M9 16h6v-6h4l-7-7-7 7h4v6zm-4 2h14v2H5v-2z"
    fill="#987654"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconUploadSolid should correctly render icon with default values 1`] = `
<AccessibleSVG
  className="icon-upload-solid "
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    className="fill-color"
    d="M9 16h6v-6h4l-7-7-7 7h4v6zm-4 2h14v2H5v-2z"
    fill="black"
  />
</AccessibleSVG>
`;
